# cruStation

./: Cargo.toml  README.md  index.html
bios/: .gitignore
cpu/: Cargo.toml
cpu/benches/: bench.rs
cpu/src/: arith.rs  branch.rs  cop.rs  cop0.rs  debug.rs  disasm-bin.rs  instruction.rs  lib.rs  load_store.rs  scratchpad.rs
cpu/src/gte/: algebra.rs  color.rs  mod.rs  operations.rs
cpu/tests/: integration_test.rs
cpu/tests/gte/: mod.rs
cpu/tests/gte/fuzz/: README.md  mod.rs
cpu/tests/gte/fuzz/data/: avsz3.json  cc.json  dpct.json  gpf.json  intpl.json  mvmva.json  nccs.json  ncct.json  ncs.json  nct.json  rptp.json  sqr.json
gui/: Cargo.toml  main.rs  render_pipelines.rs  state.rs  texture.rs  vertex_data.rs
gui/shaders/: screen_quad.wgsl  triangle.wgsl
gui/src/: gpu_command.rs  lib.rs  render_pipelines.rs  renderer.rs  state.rs  system.rs  texture.rs  vertex_data.rs
gui/src/shaders/: common.wgsl  gouraud_primitive.wgsl  screen_quad.wgsl  textured_rect.wgsl
logger/: Cargo.toml
logger/src/: lib.rs
src/: debug.rs  emulator.rs  executable.rs  main.rs  system.rs
src/hw/: bios.rs  bus.rs  disasm.rs  mod.rs  ram.rs  scratchpad.rs  timers.rs  vec.rs
src/hw/cdrom/: mod.rs
src/hw/cpu/: arith.rs  biu.rs  branch.rs  cop.rs  cop0.rs  debug.rs  icache.rs  instruction.rs  load_store.rs  mod.rs
src/hw/cpu/gte/: algebra.rs  division.rs  mod.rs  operations.rs
src/hw/dma/: mod.rs
src/hw/gpu/: mod.rs  renderer.rs  shaders.rs
src/hw/gpu/shaders/: shader.wgsl  vertex.glsl
src/hw/gte/: algebra.rs  division.rs  mod.rs
src/hw/joy_mc/: mod.rs
src/hw/spu/: mod.rs
tests/: integration_test.rs
tests/gte/: mod.rs
tests/gte/fuzz/: mod.rs
tests/gte/fuzz/data/: avsz4.json  cdp.json  dcpl.json  dpcs.json  gpl.json  ncds.json  ncdt.json  nclip.json  op.json  registers.json  rtps.json
