[package]
name = "psx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpu = { path = "cpu" }
logger = { path = "logger" }

bitfield = "0.19.0"
byteorder = "1.5.0"
ctrlc = "3.4.6"
lazy_static = "1.5.0"
ringbuffer = "0.15.0"
rustyline = "15.0.0"
winit = { version = "0.29" }
env_logger = "0.10"
log = "0.4"
wgpu = "25.0"
pollster = "0.3"

[profile.dev]
# Reduce 33.8Mhz from 22 seconds to 1.7 seconds even in dev mode
opt-level = 1
