[package]
name = "cpu"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[lib]
name = "crustationcpu"

[[bin]]
name = "disasm"
path = "src/disasm-bin.rs"

[dependencies]
bitfield = "0.19.0"
logger = { path = "../logger" }
rustyline = "15.0.0"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"