[package]
name = "gui"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[lib]
name = "crustationgui"

[dependencies]
winit = "0.29"
wgpu = "25.0.0"
log = "0.4.27"
pollster = "0.4"
bytemuck = { version = "1.15", features = ["derive"] }
crossbeam-channel = "0.5"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"